--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,9 @@ jobs:
     docker:
       - image: circleci/python:3.6.4
     steps:
+      - checkout
       - run:
           name: Test
-          command: python tests.py
+          command: |
+            sudo pip install -r requirements.txt
+            python tests.py
