--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,11 @@ jobs:
       # deploy the image
       - run: docker push $DOCKER_USER/codechan:$CIRCLE_SHA1 
       - run: docker push $DOCKER_USER/codechan:latest
+    steps:
+      - run:
+        name: Deploy over SSH
+        command: |
+          ssh -i $codeacademy ubuntu@35.195.63.194 "docker container run -d -p 5000:5000 arcrl/codechan"
 workflows:
   version: 2
   myworkflow:
