--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,11 +27,13 @@ jobs:
       # deploy the image
       - run: docker push $DOCKER_USER/codechan:$CIRCLE_SHA1 
       - run: docker push $DOCKER_USER/codechan:latest
+  deploy:
+    machine: true
     steps:
       - run:
         name: Deploy over SSH
         command: |
-          ssh -i $codeacademy ubuntu@35.195.63.194 "docker container run -d -p 5000:5000 arcrl/codechan"
+          ssh -i $codeacademy ubuntu@35.195.63.194 "docker container run --name codechan_con -d -p 5000:5000 arcrl/codechan"
 workflows:
   version: 2
   myworkflow:
@@ -40,3 +42,6 @@ workflows:
       - dockerize:
           requires:
             - test
+      - deply:
+          requires:
+            - dockerize
