CCI config fixed spelling

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,6 @@ workflows:
       - dockerize:
           requires:
             - test
-      - deply:
+      - deploy:
           requires:
             - dockerize
