--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,7 @@ jobs:
           name: Deploy over SSH
           command: |
             echo $codeacademy > ~/.ssh/id_file
+            chmod 400 ~/.ssh/id_file
             ssh -i ~/.ssh/id_file ubuntu@35.195.63.194 "docker container run --name codechan_con -d -p 5000:5000 arcrl/codechan"
 workflows:
   version: 2
